demos/kubernetes/node-demo/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: devops-demo
  name: devops-demo
spec: 
  ports: 
    - 
      name: nodejs
      port: 3000
      targetPort: 80
  selector: 
    app: devops-demo
  type: ClusterIP
