demos/kubernetes/node-demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: devops-demo
  name: devops-demo-ingress
spec:
  rules:
    -
      host: devops-hof.marrat.de
      http:
        paths:
          -
            backend:
              serviceName: devops-demo
              servicePort: 3000
            path: /
